Revision history for Config::Abstraction - Configuration Abstraction Layer

0.14
	XML::Simple seems to be broken on many Windows systems

0.13	Tue Apr 22 15:08:00 EDT 2025
	Added the data option to new()
	sep_char option to new() wasn't being remembered
	Added AUTOLOAD support
	Fix typo - 'durs' should read 'dirs'

0.12	Mon Apr 21 10:29:54 EDT 2025
	Allow environment variables to use '::' to separate fields

0.11	Mon Apr 21 08:56:35 EDT 2025
	Make the environment variable override simpler for simple cases

0.10	Sun Apr 13 21:45:12 EDT 2025
	Check with JSON::Parse first
	Use Data::Reuse, but note RT#100461
	Note the filetype

0.09	Sat Apr 12 15:48:48 EDT 2025
	Better fix for old Perls

0.08	Sat Apr 12 10:59:22 EDT 2025
	Fix code on older Perls

0.07	Thu Apr 10 19:40:41 EDT 2025
	Change the default for config_dirs to $HOME/.conf, $DOCUMENT_ROOT/conf, ./conf
	In YAML files, split comma separated entries
	Honour path as well as config_dirs

0.06	Wed Apr  9 08:30:55 EDT 2025
	Put the paths used to load the configuration file into config_path
	Only load the modules that are needed
	Improved logging of errors
	Added _load_driver

0.05	Tue Apr  8 09:50:15 EDT 2025
	Added tests for all()
	Added the logger option to new()
	Added the config_files option

0.04	Mon Apr  7 21:06:26 EDT 2025
	Better handling of config_file mode when an XML file is missing its header
	Handle more drivers
	Added the sep_char option

0.03	Mon Apr  7 16:22:16 EDT 2025
	Use Params::Get
	Needs Test::Most
	Improved handling of XML files

0.02	Mon Apr  7 12:50:34 EDT 2025
	Added config_file option

0.01	Mon Apr  7 11:45:31 EDT 2025
        First draft