@@ -12,6 +12,7 @@ t/cover.t
 t/eof.t
 t/eol.t
 t/flatten.t
+t/logger.t
 t/manifest.t
 t/pod-cm.t
 t/pod-coverage.t
